# DynamicPose

./: .gitignore  README.MD
object_pose_estimator/: CMakeLists.txt  package.xml
object_pose_estimator/config/: cam_K.txt  pose_estimator.yaml
object_pose_estimator/config/models_obj/realsense/: mesh.json  mesh.mtl
object_pose_estimator/include/FoundationPose/: Utils.py  estimater.py  requirements.txt  run_demo.py
object_pose_estimator/include/FoundationPose/bundlesdf/: run_nerf.py
object_pose_estimator/include/MixFormerV2/: .gitignore
object_pose_estimator/include/MixFormerV2/tracking/: run_video_demo.sh
object_pose_estimator/include/Utils/: SAM2.py  foundationpose.py  groundingDINO.py  kalmanFilter.py  kalman_filter_6d.py  mixformer_tracker.py  utils.py  yolo.py
object_pose_estimator/include/segment-anything-2-real-time/: setup.py
object_pose_estimator/include/segment-anything-2-real-time/demo/: demo.py
object_pose_estimator/include/segment-anything-2-real-time/notebooks/: camera_predictor_example.ipynb
object_pose_estimator/include/segment-anything-2-real-time/sam2/: sam2_camera_predictor.py
object_pose_estimator/include/segment-anything-2-real-time/sam2_configs/: sam2_hiera_b+.yaml
object_pose_estimator/launch/: bag_player.launch  default (ori).rviz  default.rviz  estimate.launch  pth2trt.launch  run_demo.launch  run_realworld.launch  run_sim.launch  rviz.launch  track.launch
object_pose_estimator/scripts/: KalmanFilter.py  bag_player.py  generate_txt.py  model_trans.py  pose_estimator.py  startBagPlayer.sh  startPoseEstimator.sh
(+7 files in other folders)
